--- a/Lab3/galeria.html
+++ b/Lab3/galeria.html
@@ -67,7 +67,7 @@
                     <p>Guangzhou CTF Finance Centre - Kanton, Chiny</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="img/tradecenter.png" alt="Tianjin CTF Finance Center" />
+                    <img src="img/tianjin.png" alt="Tianjin CTF Finance Center" />
                     <p>Tianjin CTF Finance Center - Tiencin, Chiny</p>
                 </div>
                 <div class="gallery-item">
